# pytorch-transformer-implementation

./: .pre-commit-config.yaml  README.md  pyproject.toml
configs/: README.md
data/: README.md
deploy/: README.md
docs/: README.md
notebooks/: README.md
scripts/: README.md  train_test_model.py
src/pytorch_transformer/: __init__.py
src/pytorch_transformer/data/: __init__.py
src/pytorch_transformer/inference/: __init__.py
src/pytorch_transformer/models/: __init__.py  test_model.py
src/pytorch_transformer/training/: __init__.py  test_model_lightning.py
src/pytorch_transformer/utils/: __init__.py
tests/: README.md
